[tool.poetry]
name = "mld-test"
version = "0.1.0"
description = ""
authors = ["Leonardo Pinheiro <leoapine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
matplotlib = "3.8.3"
scikit-learn = "1.4.1.post1"
pytest = "8.1.1"
pandas = "2.2.1"
tabulate = "0.9.0"
seaborn = "0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
